--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open --config webpack.config.js",
+    "start": "webpack serve --mode development --config webpack.config.js",
     "build": "webpack --mode production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --fix ./src"
@@ -20,7 +20,9 @@
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
@@ -31,7 +33,11 @@
     "eslint-plugin-react": "^7.23.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.1.1",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
